--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -637,3 +637,21 @@ _UI_ImageUnit_imageProperty_feature = Image Property
 _UI_UnitFeature_nullDisplayValue_feature = Null Display Value
 _UI_GalleryUnit_type = Gallery Unit
 _UI_InlineAction_requiresRole_feature = Requires Role
+_UI_PropertyPath_type = Property Path
+_UI_ImageUnit_titleProperty_feature = Title Property
+_UI_ImageUnit_thumbWidth_feature = Thumb Width
+_UI_ImageUnit_thumbHeight_feature = Thumb Height
+_UI_ImageUnit_imageWidth_feature = Image Width
+_UI_ImageUnit_imageHeight_feature = Image Height
+_UI_PropertyPath_feature_feature = Feature
+_UI_PropertyPath_childFeature_feature = Child Feature
+_UI_FeaturePath_type = Feature Path
+_UI_FeaturePathAttribute_type = Feature Path Attribute
+_UI_FeaturePathAssociation_type = Feature Path Association
+_UI_ImageUnit_imagePathFeature_feature = Image Path Feature
+_UI_ImageUnit_titleFeature_feature = Title Feature
+_UI_ImageUnit_showTime_feature = Show Time
+_UI_ImageUnit_transitionTime_feature = Transition Time
+_UI_FeaturePathAttribute_attribute_feature = Attribute
+_UI_FeaturePathAssociation_association_feature = Association
+_UI_FeaturePathAssociation_childFeature_feature = Child Feature
