Configuration of image file path and title properties

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -655,3 +655,4 @@ _UI_ImageUnit_transitionTime_feature = Transition Time
 _UI_FeaturePathAttribute_attribute_feature = Attribute
 _UI_FeaturePathAssociation_association_feature = Association
 _UI_FeaturePathAssociation_childFeature_feature = Child Feature
+_UI_ImageUnit_missingImagePath_feature = Missing Image Path
