Unify feature path approaches

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -666,3 +666,5 @@ _UI_ThumbnailFilter_width_feature = Width
 _UI_ThumbnailFilter_height_feature = Height
 _UI_ImageUnit_thumbnailFilter_feature = Thumbnail Filter
 _UI_ImageUnit_imageFilter_feature = Image Filter
+_UI_FeaturePathAssociation_name_feature = Name
+_UI_FeaturePathAttribute_name_feature = Name
