--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -668,3 +668,4 @@ _UI_ImageUnit_thumbnailFilter_feature = Thumbnail Filter
 _UI_ImageUnit_imageFilter_feature = Image Filter
 _UI_FeaturePathAssociation_name_feature = Name
 _UI_FeaturePathAttribute_name_feature = Name
+_UI_UnitAssociation_path_feature = Path
