Rename feature path propoerties to make purpose clear

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -669,3 +669,6 @@ _UI_ImageUnit_imageFilter_feature = Image Filter
 _UI_FeaturePathAssociation_name_feature = Name
 _UI_FeaturePathAttribute_name_feature = Name
 _UI_UnitAssociation_path_feature = Path
+_UI_ResourceFeature_type = Resource Feature
+_UI_Resource_features_feature = Features
+_UI_ResourceFeature_partOf_feature = Part Of
