Add concept of image index

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -672,3 +672,4 @@ _UI_UnitAssociation_path_feature = Path
 _UI_ResourceFeature_type = Resource Feature
 _UI_Resource_features_feature = Features
 _UI_ResourceFeature_partOf_feature = Part Of
+_UI_IndexImageGridUnit_type = Index Image Grid Unit
