Classify unit types into singletons, collections and selectables

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -448,10 +448,6 @@ _UI_Query_query_feature = Query
 _UI_Query_actuals_feature = Actuals
 _UI_QueryParameter_formal_feature = Formal
 _UI_QueryParameter_value_feature = Value
-_UI_Selectable_type = Selectable
-_UI_Selectable_targettingActions_feature = Targetting Actions
-_UI_Selectable_selectionFeatures_feature = Selection Features
-_UI_Selectable_parameters_feature = Parameters
 _UI_Query_filter_feature = Filter
 _UI_Query_parameters_feature = Parameters
 _UI_DetailsUnit_onlyDisplayWhenNotEmpty_feature = Only Display When Not Empty
@@ -668,3 +664,11 @@ _UI_ResourceFeature_partOf_feature = Part Of
 _UI_IndexImageGridUnit_type = Index Image Grid Unit
 _UI_ImageIndexUnit_type = Image Index Unit
 _UI_GalleryUnit_fullSizeFilter_feature = Full Size Filter
+_UI_SingletonUnit_type = Singleton Unit
+_UI_CollectionUnit_type = Collection Unit
+_UI_SelectableUnit_type = Selectable Unit
+_UI_SelectableUnit_selectors_feature = Selectors
+_UI_SelectableUnit_selectionType_feature = Selection Type
+_UI_CollectionUnit_x_feature = X
+_UI_SingletonUnit_contentType_feature = Content Type
+_UI_CollectionUnit_contentType_feature = Content Type
