Classify unit types into singletons, collections and selectables

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -68,7 +68,6 @@ _UI_IndexPageDirectionUnit_type = Index Page Direction Unit
 _UI_IndexLineDirectionUnit_type = Index Line Direction Unit
 _UI_ControlUnit_type = Control Unit
 _UI_SearchUnit_type = Search Unit
-_UI_ActionUnit_type = Action Unit
 _UI_AuthenticationUnit_type = Authentication Unit
 _UI_RegistrationUnit_type = Registration Unit
 _UI_LoginUnit_type = Login Unit
@@ -273,7 +272,6 @@ _UI_ControlUnit_submitLabel_feature = Submit Label
 _UI_ControlUnit_cancelDestination_feature = Cancel Destination
 _UI_ControlUnit_cancelLabel_feature = Cancel Label
 _UI_SearchUnit_resultsDestination_feature = Results Destination
-_UI_ActionUnit_omitFieldLabels_feature = Omit Field Labels
 _UI_RegistrationUnit_authenticationSystem_feature = Authentication System
 _UI_LoginUnit_authenticationSystem_feature = Authentication System
 _UI_LoginUnit_loginIdField_feature = Login Id Field
@@ -672,3 +670,4 @@ _UI_SelectableUnit_selectionType_feature = Selection Type
 _UI_CollectionUnit_x_feature = X
 _UI_SingletonUnit_contentType_feature = Content Type
 _UI_CollectionUnit_contentType_feature = Content Type
+_UI_CollectionUnit_selection_feature = Selection
