Add containing feature for collection selectables

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -661,3 +661,4 @@ _UI_CollectionUnit_x_feature = X
 _UI_SingletonUnit_contentType_feature = Content Type
 _UI_CollectionUnit_contentType_feature = Content Type
 _UI_CollectionUnit_selection_feature = Selection
+_UI_CollectionUnit_containingFeature_feature = Containing Feature
