Refactor pagination code to collection unit

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -662,3 +662,15 @@ _UI_SingletonUnit_contentType_feature = Content Type
 _UI_CollectionUnit_contentType_feature = Content Type
 _UI_CollectionUnit_selection_feature = Selection
 _UI_CollectionUnit_containingFeature_feature = Containing Feature
+_UI_CollectionUnit_filters_feature = Filters
+_UI_CollectionUnit_pagination_feature = Pagination
+_UI_CollectionUnit_emptyMessage_feature = Empty Message
+_UI_CollectionUnit_defaultPaginationSize_feature = Default Pagination Size
+_UI_CollectionUnit_nextNpages_feature = Next Npages
+_UI_CollectionUnit_previousNpages_feature = Previous Npages
+_UI_CollectionUnit_nextPageLabel_feature = Next Page Label
+_UI_CollectionUnit_previousPageLabel_feature = Previous Page Label
+_UI_CollectionUnit_useDisabledPageLinks_feature = Use Disabled Page Links
+_UI_CollectionUnit_useFirstLastPageLinks_feature = Use First Last Page Links
+_UI_CollectionUnit_firstPageLabel_feature = First Page Label
+_UI_CollectionUnit_lastPageLabel_feature = Last Page Label
