Allow selections to be flag as requiring routing parameters

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -674,3 +674,4 @@ _UI_CollectionUnit_useDisabledPageLinks_feature = Use Disabled Page Links
 _UI_CollectionUnit_useFirstLastPageLinks_feature = Use First Last Page Links
 _UI_CollectionUnit_firstPageLabel_feature = First Page Label
 _UI_CollectionUnit_lastPageLabel_feature = Last Page Label
+_UI_Selection_selected_feature = Selected
