--- a/uk.ac.man.cs.mdsd.service.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.service.edit/plugin.properties
@@ -197,3 +197,8 @@ _UI_Order_type = Order
 _UI_Asc_type = Asc
 _UI_Desc_type = Desc
 _UI_Order_path_feature = Path
+_UI_FeatureReference_type = Feature Reference
+_UI_ParameterReference_type = Parameter Reference
+_UI_CurrentUserReference_type = Current User Reference
+_UI_FeatureReference_feature_feature = Feature
+_UI_ParameterReference_parameter_feature = Parameter
