Formal parameters have a data type

--- a/uk.ac.man.cs.mdsd.webgen.service.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.webgen.service.edit/plugin.properties
@@ -278,3 +278,4 @@ _UI_FormalParameterList_parameters_feature = Parameters
 _UI_FormalParameter_formalFor_feature = Formal For
 _UI_FormalParameter_optional_feature = Optional
 _UI_FormalParameter_defaultValue_feature = Default Value
+_UI_FormalParameter_dataType_feature = Data Type
