--- a/uk.ac.man.cs.mdsd.service.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.service.edit/plugin.properties
@@ -202,3 +202,8 @@ _UI_ParameterReference_type = Parameter Reference
 _UI_CurrentUserReference_type = Current User Reference
 _UI_FeatureReference_feature_feature = Feature
 _UI_ParameterReference_parameter_feature = Parameter
+_UI_FormalParameterList_type = Formal Parameter List
+_UI_FormalParameter_type = Formal Parameter
+_UI_FormalParameterList_parameters_feature = Parameters
+_UI_FormalParameter_dataType_feature = Data Type
+_UI_FormalParameter_defaultValue_feature = Default Value
