Add configuration proerties

--- a/uk.ac.man.cs.mdsd.webgen.persistence.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.webgen.persistence.edit/plugin.properties
@@ -193,3 +193,13 @@ _UI_isHasChoices_hasA_literal = hasA
 _UI_DateDetails_DateOnly_literal = DateOnly
 _UI_DateDetails_TimeOnly_literal = TimeOnly
 _UI_DateDetails_DateAndTime_literal = DateAndTime
+_UI_Persistence_databaseTechnology_feature = Database Technology
+_UI_Persistence_ormTechnology_feature = Orm Technology
+_UI_Persistence_databaseHost_feature = Database Host
+_UI_Persistence_databasePort_feature = Database Port
+_UI_Persistence_databaseName_feature = Database Name
+_UI_Persistence_databaseUsername_feature = Database Username
+_UI_Persistence_databasePassword_feature = Database Password
+_UI_Persistence_databasePrefix_feature = Database Prefix
+_UI_Persistence_timestampCreation_feature = Timestamp Creation
+_UI_Persistence_timestampUpdate_feature = Timestamp Update
