--- a/uk.ac.man.cs.msds.webgen.security.edit/.project
+++ b/uk.ac.man.cs.msds.webgen.security.edit/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>uk.ac.man.cs.msds.webgen.security.edit</name>
+	<name>uk.ac.man.cs.mdsd.webgen.security.edit</name>
 	<comment></comment>
 	<projects>
 	</projects>
