Update for formal parameter renaming in service model

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -512,3 +512,6 @@ _UI_PageTopMenuOptions_IncludeWhenAuthenticated_literal = IncludeWhenAuthenticat
 _UI_CollectionDisplayOptions_LineDirection_literal = LineDirection
 _UI_CollectionDisplayOptions_PageDirection_literal = PageDirection
 _UI_WafModel_business_feature = Business
+_UI_Resource_service_feature = Service
+_UI_Resource_selections_feature = Selections
+_UI_Resource_operations_feature = Operations
