--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.xml
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.xml
@@ -25,7 +25,7 @@
             uri="http://www.cs.man.ac.uk/mdsd/2010/ObjectRelationalMapping"
             class="uk.ac.man.cs.mdsd.waf.provider.WafItemProviderAdapterFactory$OrmChildCreationExtender"/>
       <extender
-            uri="http://www.cs.man.ac.uk/mdsd/2017/Service"
+            uri="http://cs.man.ac.uk/mdsd/2017/Service"
             class="uk.ac.man.cs.mdsd.waf.provider.WafItemProviderAdapterFactory$ServiceChildCreationExtender"/>
       <extender
             uri="http://www.cs.man.ac.uk/mdsd/2016/Expression"
