Make core concepts core

--- a/uk.ac.man.cs.mdsd.webgen.persistence.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.webgen.persistence.edit/plugin.properties
@@ -203,3 +203,4 @@ _UI_Persistence_databasePassword_feature = Database Password
 _UI_Persistence_databasePrefix_feature = Database Prefix
 _UI_Persistence_timestampCreation_feature = Timestamp Creation
 _UI_Persistence_timestampUpdate_feature = Timestamp Update
+_UI_EntityOrView_allowTypeCustomisation_feature = Allow Type Customisation
