--- a/uk.ac.man.cs.mdsd.webgen.core.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.webgen.core.edit/plugin.properties
@@ -22,3 +22,61 @@ _UI_NamedElement_name_feature = Name
 _UI_NamedDisplayElement_displayLabel_feature = Display Label
 _UI_Unknown_feature = Unspecified
 
+_UI_Classifier_type = Classifier
+_UI_DataType_type = Data Type
+_UI_EnumerationType_type = Enumeration Type
+_UI_EnumerationLiteral_type = Enumeration Literal
+_UI_DataType_persistentType_feature = Persistent Type
+_UI_DataType_ormType_feature = Orm Type
+_UI_DataType_interfaceType_feature = Interface Type
+_UI_DataType_placeholder_feature = Placeholder
+_UI_DataType_validationPattern_feature = Validation Pattern
+_UI_EnumerationType_enumerations_feature = Enumerations
+_UI_FormalParameterList_type = Formal Parameter List
+_UI_FormalParameter_type = Formal Parameter
+_UI_Expression_type = Expression
+_UI_Literal_type = Literal
+_UI_NullLiteral_type = Null Literal
+_UI_BooleanLiteral_type = Boolean Literal
+_UI_IntegerLiteral_type = Integer Literal
+_UI_StringLiteral_type = String Literal
+_UI_TimeLiteral_type = Time Literal
+_UI_CurrentTime_type = Current Time
+_UI_Function_type = Function
+_UI_Path_type = Path
+_UI_Predicate_type = Predicate
+_UI_PredicateBooleanOperator_type = Predicate Boolean Operator
+_UI_PredicateEqualityOperator_type = Predicate Equality Operator
+_UI_PredicateComparisonOperator_type = Predicate Comparison Operator
+_UI_PredicateIsOperator_type = Predicate Is Operator
+_UI_PredicateLikeOperator_type = Predicate Like Operator
+_UI_PredicateIsEmpty_type = Predicate Is Empty
+_UI_PredicateIsNull_type = Predicate Is Null
+_UI_FormalParameterList_parameters_feature = Parameters
+_UI_FormalParameter_formalFor_feature = Formal For
+_UI_FormalParameter_dataType_feature = Data Type
+_UI_FormalParameter_defaultValue_feature = Default Value
+_UI_BooleanLiteral_value_feature = Value
+_UI_IntegerLiteral_value_feature = Value
+_UI_StringLiteral_value_feature = Value
+_UI_TimeLiteral_value_feature = Value
+_UI_CurrentTime_format_feature = Format
+_UI_Function_name_feature = Name
+_UI_Predicate_negated_feature = Negated
+_UI_PredicateBooleanOperator_expressions_feature = Expressions
+_UI_PredicateBooleanOperator_operator_feature = Operator
+_UI_PredicateEqualityOperator_left_feature = Left
+_UI_PredicateEqualityOperator_right_feature = Right
+_UI_PredicateComparisonOperator_left_feature = Left
+_UI_PredicateComparisonOperator_operator_feature = Operator
+_UI_PredicateComparisonOperator_right_feature = Right
+_UI_PredicateIsOperator_left_feature = Left
+_UI_PredicateIsOperator_right_feature = Right
+_UI_PredicateLikeOperator_left_feature = Left
+_UI_PredicateLikeOperator_right_feature = Right
+_UI_PredicateIsEmpty_feature_feature = Feature
+_UI_PredicateIsNull_feature_feature = Feature
+_UI_BooleanOperator_And_literal = And
+_UI_BooleanOperator_Or_literal = Or
+_UI_ComparisionOperator_GreaterThan_literal = GreaterThan
+_UI_ComparisionOperator_LessThan_literal = LessThan
