--- a/uk.ac.man.cs.mdsd.webgen.interface.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.webgen.interface.edit/plugin.properties
@@ -306,3 +306,10 @@ _UI_IndexDisplayOption_Grid_literal = Grid
 _UI_IndexDisplayOption_PageDirection_literal = PageDirection
 _UI_IndexDisplayOption_LineDirection_literal = LineDirection
 _UI_Interface_textEditorURL_feature = Text Editor URL
+_UI_Interface_inputTechnology_feature = Input Technology
+_UI_Interface_ajaxTechnology_feature = Ajax Technology
+_UI_InputTechnologies_Html_literal = Html
+_UI_InputTechnologies_jQueryUI_literal = jQueryUI
+_UI_AjaxTechnologies_None_literal = None
+_UI_AjaxTechnologies_jQuery_literal = jQuery
+_UI_AjaxTechnologies_AngularJS_literal = AngularJS
