Update for renamed web UI model

--- a/uk.ac.man.cs.mdsd.webgen.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.webgen.waf.edit/plugin.properties
@@ -38,3 +38,4 @@ _UI_FrameworkTechnologies_Kohana_literal = Kohana
 _UI_FrameworkTechnologies_Laravel_literal = Laravel
 _UI_FrameworkTechnologies_Symfony_literal = Symfony
 _UI_WebApplicationFramework_api_feature = Api
+_UI_WebApplicationFramework_webUI_feature = Web UI
