Restructure webgen model to match split version of model

--- a/uk.ac.man.cs.mdsd.webgen.model.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.webgen.model.edit/plugin.properties
@@ -593,3 +593,101 @@ _UI_DebugPropertyCategory = Debug
 _UI_BusinessPropertyCategory = Business
 _UI_FilterParameter_partOf_feature = Part Of
 _UI_SelectionParameter_formalFor_feature = Formal For
+_UI_FormalParameterList_type = Formal Parameter List
+_UI_FormalParameter_type = Formal Parameter
+_UI_Security_type = Security
+_UI_Persistence_type = Persistence
+_UI_Services_type = Services
+_UI_Order_type = Order
+_UI_Asc_type = Asc
+_UI_Desc_type = Desc
+_UI_Image_type = Image
+_UI_WebUI_type = Web UI
+_UI_WebGenModel_security_feature = Security
+_UI_WebGenModel_persistence_feature = Persistence
+_UI_WebGenModel_image_feature = Image
+_UI_WebGenModel_webui_feature = Webui
+_UI_WebGenModel_frameworkTechnology_feature = Framework Technology
+_UI_WebGenModel_siteTitle_feature = Site Title
+_UI_WebGenModel_webmasterEmail_feature = Webmaster Email
+_UI_WebGenModel_copyrightText_feature = Copyright Text
+_UI_WebGenModel_captchaSiteKey_feature = Captcha Site Key
+_UI_WebGenModel_captchaSecretKey_feature = Captcha Secret Key
+_UI_WebGenModel_metaDescription_feature = Meta Description
+_UI_FormalParameterList_parameters_feature = Parameters
+_UI_FormalParameter_formalFor_feature = Formal For
+_UI_FormalParameter_dataType_feature = Data Type
+_UI_FormalParameter_defaultValue_feature = Default Value
+_UI_Security_authentication_feature = Authentication
+_UI_Persistence_classifiers_feature = Classifiers
+_UI_Persistence_databaseTechnology_feature = Database Technology
+_UI_Persistence_databasePrefix_feature = Database Prefix
+_UI_Persistence_databaseHost_feature = Database Host
+_UI_Persistence_databaseName_feature = Database Name
+_UI_Persistence_databasePort_feature = Database Port
+_UI_Persistence_databaseUsername_feature = Database Username
+_UI_Persistence_databasePassword_feature = Database Password
+_UI_Persistence_ormTechnology_feature = Orm Technology
+_UI_Persistence_timestampCreation_feature = Timestamp Creation
+_UI_Persistence_timestampUpdates_feature = Timestamp Updates
+_UI_Services_services_feature = Services
+_UI_Order_path_feature = Path
+_UI_Image_manipulations_feature = Manipulations
+_UI_WebUI_pages_feature = Pages
+_UI_WebUI_menus_feature = Menus
+_UI_WebUI_inputTechnology_feature = Input Technology
+_UI_WebUI_ajaxTechnology_feature = Ajax Technology
+_UI_WebUI_defaultDateFormat_feature = Default Date Format
+_UI_WebUI_defaultTimeFormat_feature = Default Time Format
+_UI_WebUI_defaultDateTimeFormat_feature = Default Date Time Format
+_UI_WebUI_defaultMaximumUploadSize_feature = Default Maximum Upload Size
+_UI_WebUI_responsiveTopMenu_feature = Responsive Top Menu
+_UI_WebUI_topNavigationId_feature = Top Navigation Id
+_UI_WebUI_sideMenu_feature = Side Menu
+_UI_WebUI_siteTemplate_feature = Site Template
+_UI_WebUI_staticUnitsEditable_feature = Static Units Editable
+_UI_WebUI_textEditorURL_feature = Text Editor URL
+_UI_Security_user_feature = User
+_UI_WebGenModel_webUI_feature = Web UI
+_UI_WebGenModel_developmentVersion_feature = Development Version
+_UI_WebGenModel_baseURL_feature = Base URL
+_UI_WebGenModel_rewriteURLs_feature = Rewrite UR Ls
+_UI_WebGenModel_projectName_feature = Project Name
+_UI_WebGenModel_testProjectName_feature = Test Project Name
+_UI_WebGenModel_defaultDateFormat_feature = Default Date Format
+_UI_WebGenModel_defaultTimeFormat_feature = Default Time Format
+_UI_WebGenModel_defaultDateTimeFormat_feature = Default Date Time Format
+_UI_WebGenModel_defaultMaximumUploadSize_feature = Default Maximum Upload Size
+_UI_WebGenModel_databaseTechnology_feature = Database Technology
+_UI_WebGenModel_databasePrefix_feature = Database Prefix
+_UI_WebGenModel_databaseHost_feature = Database Host
+_UI_WebGenModel_databaseName_feature = Database Name
+_UI_WebGenModel_databasePort_feature = Database Port
+_UI_WebGenModel_databaseUsername_feature = Database Username
+_UI_WebGenModel_databasePassword_feature = Database Password
+_UI_WebGenModel_ormTechnology_feature = Orm Technology
+_UI_WebGenModel_timestampCreation_feature = Timestamp Creation
+_UI_WebGenModel_timestampUpdates_feature = Timestamp Updates
+_UI_WebGenModel_inputTechnology_feature = Input Technology
+_UI_WebGenModel_ajaxTechnology_feature = Ajax Technology
+_UI_WebGenModel_textEditorURL_feature = Text Editor URL
+_UI_WebGenModel_responsiveTopMenu_feature = Responsive Top Menu
+_UI_WebGenModel_topNavigationId_feature = Top Navigation Id
+_UI_WebGenModel_sideMenu_feature = Side Menu
+_UI_WebGenModel_siteTemplate_feature = Site Template
+_UI_WebGenModel_staticUnitsEditable_feature = Static Units Editable
+_UI_WebApplicationFramework_type = Web Application Framework
+_UI_WebApplicationFramework_allowTypeCustomisation_feature = Allow Type Customisation
+_UI_WebApplicationFramework_persistence_feature = Persistence
+_UI_WebApplicationFramework_security_feature = Security
+_UI_WebApplicationFramework_services_feature = Services
+_UI_WebApplicationFramework_image_feature = Image
+_UI_WebApplicationFramework_webUI_feature = Web UI
+_UI_WebApplicationFramework_frameworkTechnology_feature = Framework Technology
+_UI_WebApplicationFramework_siteTitle_feature = Site Title
+_UI_WebApplicationFramework_webmasterEmail_feature = Webmaster Email
+_UI_WebApplicationFramework_copyrightText_feature = Copyright Text
+_UI_WebApplicationFramework_captchaSiteKey_feature = Captcha Site Key
+_UI_WebApplicationFramework_captchaSecretKey_feature = Captcha Secret Key
+_UI_WebApplicationFramework_metaDescription_feature = Meta Description
+_UI_Security_userKey_feature = User Key
