Include user model in security

--- a/uk.ac.man.cs.msds.webgen.security.edit/plugin.properties
+++ b/uk.ac.man.cs.msds.webgen.security.edit/plugin.properties
@@ -35,3 +35,6 @@ _UI_Unknown_feature = Unspecified
 _UI_AuthenticationKeyTypes_Email_literal = Email
 _UI_AuthenticationKeyTypes_ScreenName_literal = ScreenName
 _UI_AuthenticationKeyTypes_Username_literal = Username
+_UI_Security_user_feature = User
+_UI_Security_userKey_feature = User Key
+_UI_Security_authentication_feature = Authentication
