--- a/uk.ac.man.cs.mdsd.expression.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.expression.edit/plugin.properties
@@ -211,3 +211,4 @@ _UI_BooleanOperator_And_literal = And
 _UI_BooleanOperator_Or_literal = Or
 _UI_ComparisionOperator_GreaterThan_literal = GreaterThan
 _UI_ComparisionOperator_LessThan_literal = LessThan
+_UI_Variable_type = Variable
