Make current user a fundamental type of expression

--- a/uk.ac.man.cs.mdsd.expression.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.expression.edit/plugin.properties
@@ -212,3 +212,4 @@ _UI_BooleanOperator_Or_literal = Or
 _UI_ComparisionOperator_GreaterThan_literal = GreaterThan
 _UI_ComparisionOperator_LessThan_literal = LessThan
 _UI_Variable_type = Variable
+_UI_CurrentUser_type = Current User
