--- a/uk.ac.man.cs.mdsd.expression.edit/plugin.xml
+++ b/uk.ac.man.cs.mdsd.expression.edit/plugin.xml
@@ -9,7 +9,7 @@
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
       <!-- @generated Expression -->
       <factory
-            uri="http://www.cs.man.ac.uk/mdsd/2016/Expression"
+            uri="http://cs.man.ac.uk/mdsd/expression"
             class="uk.ac.man.cs.mdsd.expression.provider.ExpressionItemProviderAdapterFactory"
             supportedTypes=
               "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
