--- a/uk.ac.man.cs.mdsd.expression.model/plugin.xml
+++ b/uk.ac.man.cs.mdsd.expression.model/plugin.xml
@@ -9,7 +9,7 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <!-- @generated Expression -->
       <package
-            uri="http://www.cs.man.ac.uk/mdsd/2016/Expression"
+            uri="http://cs.man.ac.uk/mdsd/expression"
             class="uk.ac.man.cs.mdsd.expression.ExpressionPackage"
             genModel="model/Expression.xcore"/>
    </extension>
