--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.xml
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.xml
@@ -9,7 +9,7 @@
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
       <!-- @generated Waf -->
       <factory
-            uri="http://www.cs.man.ac.uk/mdsd/2015/WebApplicationFramework"
+            uri="http://cs.man.ac.uk/mdsd/WebApplicationFramework"
             class="uk.ac.man.cs.mdsd.waf.provider.WafItemProviderAdapterFactory"
             supportedTypes=
               "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
