--- a/uk.ac.man.cs.mdsd.waf.model/plugin.xml
+++ b/uk.ac.man.cs.mdsd.waf.model/plugin.xml
@@ -9,7 +9,7 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <!-- @generated Waf -->
       <package
-            uri="http://www.cs.man.ac.uk/mdsd/2015/WebApplicationFramework"
+            uri="http://cs.man.ac.uk/mdsd/WebApplicationFramework"
             class="uk.ac.man.cs.mdsd.waf.WafPackage"
             genModel="model/Waf.xcore"/>
    </extension>
