--- a/uk.ac.man.cs.mdsd.service.model/plugin.xml
+++ b/uk.ac.man.cs.mdsd.service.model/plugin.xml
@@ -9,7 +9,7 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <!-- @generated Waf -->
       <package
-            uri="http://www.cs.man.ac.uk/mdsd/2017/Service"
+            uri="http://cs.manchester.ac.uk/mdsd/service"
             class="uk.ac.man.cs.mdsd.service.ServicePackage"
             genModel="model/Service.xcore"/>
    </extension>
