Update model URI

--- a/uk.ac.man.cs.mdsd.expression.edit/plugin.xml
+++ b/uk.ac.man.cs.mdsd.expression.edit/plugin.xml
@@ -9,7 +9,7 @@
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
       <!-- @generated Expression -->
       <factory
-            uri="http://cs.man.ac.uk/mdsd/expression"
+            uri="http://cs.manchester.ac.uk/mdsd/Expression"
             class="uk.ac.man.cs.mdsd.expression.provider.ExpressionItemProviderAdapterFactory"
             supportedTypes=
               "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
