Remove static menu concept

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -506,3 +506,7 @@ _UI_PageTopMenuOptions_IncludeWhenAuthenticated_literal = IncludeWhenAuthenticat
 _UI_CollectionDisplayOptions_LineDirection_literal = LineDirection
 _UI_CollectionDisplayOptions_PageDirection_literal = PageDirection
 _UI_WafModel_business_feature = Business
+_UI_GlobalMenu_type = Global Menu
+_UI_ContextMenu_type = Context Menu
+_UI_WafModel_globalMenu_feature = Global Menu
+_UI_WafModel_contextMenus_feature = Context Menus
