Basic API model

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -510,3 +510,9 @@ _UI_GlobalMenu_type = Global Menu
 _UI_ContextMenu_type = Context Menu
 _UI_WafModel_globalMenu_feature = Global Menu
 _UI_WafModel_contextMenus_feature = Context Menus
+_UI_Resource_service_feature = Service
+_UI_Resource_supportFindOne_feature = Support Find One
+_UI_Resource_supportFindAll_feature = Support Find All
+_UI_Resource_selections_feature = Selections
+_UI_Resource_childResources_feature = Child Resources
+_UI_WafModel_api_feature = Api
