--- a/uk.ac.man.cs.mdsd.api.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.api.edit/plugin.properties
@@ -173,3 +173,5 @@ _UI_EGenericType_eClassifier_description = The classifier denoted by this generi
 _UI_ETypeParameter_eBounds_feature = EBounds
 _UI_Unknown_feature = Unspecified
 
+_UI_Resource_name_feature = Name
+_UI_Resource_uriElement_feature = Uri Element
