Update support method name from find to get

--- a/uk.ac.man.cs.mdsd.api.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.api.edit/plugin.properties
@@ -175,3 +175,5 @@ _UI_Unknown_feature = Unspecified
 
 _UI_Resource_name_feature = Name
 _UI_Resource_uriElement_feature = Uri Element
+_UI_Resource_supportGetOne_feature = Support Get One
+_UI_Resource_supportGetAll_feature = Support Get All
