Make serialization groups explicit things

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -488,3 +488,5 @@ _UI_AssociationKey_targetColumnName_feature = Target Column Name
 _UI_AssociationKey_sourceColumnName_feature = Source Column Name
 _UI_EntityOrView_unique_feature = Unique
 _UI_EntityOrView_containerUnique_feature = Container Unique
+_UI_SerializationGroup_type = Serialization Group
+_UI_OrmModel_serializationGroups_feature = Serialization Groups
