Allow default serialization groups for resources

--- a/uk.ac.man.cs.mdsd.api.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.api.edit/plugin.properties
@@ -177,3 +177,6 @@ _UI_Resource_name_feature = Name
 _UI_Resource_uriElement_feature = Uri Element
 _UI_Resource_supportGetOne_feature = Support Get One
 _UI_Resource_supportGetAll_feature = Support Get All
+_UI_Resource_parentResource_feature = Parent Resource
+_UI_Resource_serializationGroups_feature = Serialization Groups
+_UI_Resource_defaultSerializationGroups_feature = Default Serialization Groups
