Allow identification of the get all and one selections

--- a/uk.ac.man.cs.mdsd.api.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.api.edit/plugin.properties
@@ -180,3 +180,13 @@ _UI_Resource_supportGetAll_feature = Support Get All
 _UI_Resource_parentResource_feature = Parent Resource
 _UI_Resource_serializationGroups_feature = Serialization Groups
 _UI_Resource_defaultSerializationGroups_feature = Default Serialization Groups
+_UI_ResourceSelection_type = Resource Selection
+_UI_Resource_enableDefaultGetOne_feature = Enable Default Get One
+_UI_Resource_enableDefaultGetAll_feature = Enable Default Get All
+_UI_Resource_getAll_feature = Get All
+_UI_Resource_getOne_feature = Get One
+_UI_ResourceSelection_parentResource_feature = Parent Resource
+_UI_ResourceSelection_selection_feature = Selection
+_UI_ResourceSelection_name_feature = Name
+_UI_ResourceSelection_uriElement_feature = Uri Element
+_UI_ResourceSelection_defaultSerializationGroups_feature = Default Serialization Groups
