Allow documentation of formal parameters

--- a/uk.ac.man.cs.mdsd.service.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.service.edit/plugin.properties
@@ -201,3 +201,8 @@ _UI_FeatureReference_type = Feature Reference
 _UI_ParameterReference_type = Parameter Reference
 _UI_FeatureReference_feature_feature = Feature
 _UI_ParameterReference_parameter_feature = Parameter
+_UI_FormalParameter_type = Formal Parameter
+_UI_FormalParameter_optional_feature = Optional
+_UI_FormalParameter_defaultValue_feature = Default Value
+_UI_FormalParameter_dataType_feature = Data Type
+_UI_FormalParameter_description_feature = Description
