--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -490,3 +490,4 @@ _UI_EntityOrView_unique_feature = Unique
 _UI_EntityOrView_containerUnique_feature = Container Unique
 _UI_SerializationGroup_type = Serialization Group
 _UI_OrmModel_serializationGroups_feature = Serialization Groups
+_UI_EntityOrView_allowFormTypeCustomisation_feature = Allow Form Type Customisation
