Add git ignore files to generated directories

--- a/uk.ac.man.cs.mdsd.service.model/src-gen/uk/ac/man/cs/mdsd/service/.gitignore
+++ b/uk.ac.man.cs.mdsd.service.model/src-gen/uk/ac/man/cs/mdsd/service/.gitignore
@@ -8,3 +8,6 @@
 /ServiceFactory.java
 /ServiceModel.java
 /ServicePackage.java
+/FeatureReference.java
+/FormalParameter.java
+/ParameterReference.java
