--- a/uk.ac.man.cs.mdsd.service.model/src-gen/uk/ac/man/cs/mdsd/service/impl/.gitignore
+++ b/uk.ac.man.cs.mdsd.service.model/src-gen/uk/ac/man/cs/mdsd/service/impl/.gitignore
@@ -7,3 +7,6 @@
 /ServiceImpl.java
 /ServiceModelImpl.java
 /ServicePackageImpl.java
+/FeatureReferenceImpl.java
+/FormalParameterImpl.java
+/ParameterReferenceImpl.java
