--- a/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/impl/.gitignore
+++ b/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/impl/.gitignore
@@ -1,2 +1,63 @@
 /ModelReferenceImpl.java
 /RouteParameterReferenceImpl.java
+/WafFactoryImpl.java
+/WafPackageImpl.java
+/ActionMenuEntryImpl.java
+/AuthenticationImpl.java
+/CasAuthenticationImpl.java
+/DisplayElementImpl.java
+/DynamicMenuImpl.java
+/ImageFilterImpl.java
+/ImageManipulationImpl.java
+/LocalAuthenticationSystemImpl.java
+/MenuEntryImpl.java
+/MenuImpl.java
+/ThumbnailFilterImpl.java
+/AssociationReferenceImpl.java
+/CaptchaFieldImpl.java
+/ChildPathAssociationImpl.java
+/ChildPathAttributeImpl.java
+/ChildPathImpl.java
+/ContentUnitImpl.java
+/ControlUnitImpl.java
+/CreateUnitImpl.java
+/CreateUpdateUnitImpl.java
+/DataTypeFieldImpl.java
+/DataUnitImpl.java
+/DateFieldImpl.java
+/DeleteActionImpl.java
+/DetailsUnitImpl.java
+/DynamicUnitImpl.java
+/EditStaticTextMenuEntryImpl.java
+/EditUnitImpl.java
+/FeaturePathAssociationImpl.java
+/FeaturePathAttributeImpl.java
+/FeaturePathImpl.java
+/FeatureSupportActionImpl.java
+/FilterImpl.java
+/FilterParameterImpl.java
+/ForgottenPasswordUnitImpl.java
+/GalleryUnitImpl.java
+/ImageIndexUnitImpl.java
+/ImageUnitImpl.java
+/IndexGridUnitImpl.java
+/IndexLineDirectionUnitImpl.java
+/IndexPageDirectionUnitImpl.java
+/IndexUnitImpl.java
+/InlineActionImpl.java
+/InterfaceFieldImpl.java
+/LoginUnitImpl.java
+/MapUnitImpl.java
+/PageImpl.java
+/QueryImpl.java
+/QueryParameterImpl.java
+/RegistrationUnitImpl.java
+/SearchUnitImpl.java
+/SelectActionImpl.java
+/SliderUnitImpl.java
+/StaticUnitImpl.java
+/UnitAssociationImpl.java
+/UnitAttributeImpl.java
+/UnitFeatureImpl.java
+/UnitSupportActionImpl.java
+/UpdateUnitImpl.java
