Allow identification of selection providing ajax options list

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -131,7 +131,6 @@ _UI_WafModel_topNavigationId_feature = Top Navigation Id
 _UI_WafModel_sideMenu_feature = Side Menu
 _UI_WafModel_siteTemplate_feature = Site Template
 _UI_WafModel_staticUnitsEditable_feature = Static Units Editable
-_UI_WafModel_allowTypeCustomisation_feature = Allow Type Customisation
 _UI_WafModel_restApi_feature = Rest Api
 _UI_Authentication_authorises_feature = Authorises
 _UI_Authentication_user_feature = User
@@ -513,3 +512,4 @@ _UI_Resource_supportFindAll_feature = Support Find All
 _UI_Resource_selections_feature = Selections
 _UI_Resource_childResources_feature = Child Resources
 _UI_WafModel_api_feature = Api
+_UI_UnitAssociation_ajaxOptionsList_feature = Ajax Options List
