Make selection filter definiiton part of selection definition

--- a/uk.ac.man.cs.mdsd.service.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.service.edit/plugin.properties
@@ -203,3 +203,16 @@ _UI_FormalParameter_optional_feature = Optional
 _UI_FormalParameter_defaultValue_feature = Default Value
 _UI_FormalParameter_dataType_feature = Data Type
 _UI_FormalParameter_description_feature = Description
+_UI_Filter_type = Filter
+_UI_Filter_parameters_feature = Parameters
+_UI_Filter_selection_feature = Selection
+_UI_Selection_condition_feature = Condition
+_UI_Selection_filters_feature = Filters
+_UI_Filter_conditition_feature = Conditition
+_UI_FormalParameterList_type = Formal Parameter List
+_UI_FormalParameterList_parameters_feature = Parameters
+_UI_Filter_condition_feature = Condition
+_UI_Selection_methodName_feature = Method Name
+_UI_Filter_methodName_feature = Method Name
+_UI_Service_findAll_feature = Find All
+_UI_Service_findOne_feature = Find One
