Use filter parameters from selection filter definition

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -508,3 +508,5 @@ _UI_Resource_selections_feature = Selections
 _UI_Resource_childResources_feature = Child Resources
 _UI_WafModel_api_feature = Api
 _UI_UnitAssociation_ajaxOptionsList_feature = Ajax Options List
+_UI_CollectionUnit_supportedFilters_feature = Supported Filters
+_UI_CollectionUnit_maximumPaginationSize_feature = Maximum Pagination Size
