--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -510,3 +510,7 @@ _UI_WafModel_api_feature = Api
 _UI_UnitAssociation_ajaxOptionsList_feature = Ajax Options List
 _UI_CollectionUnit_supportedFilters_feature = Supported Filters
 _UI_CollectionUnit_maximumPaginationSize_feature = Maximum Pagination Size
+_UI_CollectionUnit_filterNames_feature = Filter Names
+_UI_CollectionUnit_services_feature = Services
+_UI_CollectionUnit_selections_feature = Selections
+_UI_CollectionUnit_filter_feature = Filter
