Add constant to epression

--- a/uk.ac.man.cs.mdsd.expression.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.expression.edit/plugin.properties
@@ -213,3 +213,6 @@ _UI_ComparisionOperator_GreaterThan_literal = GreaterThan
 _UI_ComparisionOperator_LessThan_literal = LessThan
 _UI_Variable_type = Variable
 _UI_CurrentUser_type = Current User
+_UI_PredicateInOperator_type = Predicate In Operator
+_UI_PredicateInOperator_left_feature = Left
+_UI_PredicateInOperator_right_feature = Right
