--- a/uk.ac.man.cs.mdsd.service.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.service.edit/plugin.properties
@@ -217,3 +217,5 @@ _UI_Filter_methodName_feature = Method Name
 _UI_Service_findAll_feature = Find All
 _UI_Service_findOne_feature = Find One
 _UI_FormalParameter_placeholder_feature = Placeholder
+_UI_Constant_type = Constant
+_UI_Constant_value_feature = Value
