Allow disabling of form fields

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -513,3 +513,4 @@ _UI_CollectionUnit_filterNames_feature = Filter Names
 _UI_CollectionUnit_services_feature = Services
 _UI_CollectionUnit_selections_feature = Selections
 _UI_CollectionUnit_filter_feature = Filter
+_UI_UnitField_disableInput_feature = Disable Input
