Allow unit to locally configure routing parameters

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -514,3 +514,7 @@ _UI_CollectionUnit_services_feature = Services
 _UI_CollectionUnit_selections_feature = Selections
 _UI_CollectionUnit_filter_feature = Filter
 _UI_UnitField_disableInput_feature = Disable Input
+_UI_RoutingActual_type = Routing Actual
+_UI_ContentUnit_routingActuals_feature = Routing Actuals
+_UI_RoutingActual_routingParameter_feature = Routing Parameter
+_UI_RoutingActual_value_feature = Value
