Model constant as element of service

--- a/uk.ac.man.cs.mdsd.service.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.service.edit/plugin.properties
@@ -219,3 +219,7 @@ _UI_Service_findOne_feature = Find One
 _UI_FormalParameter_placeholder_feature = Placeholder
 _UI_Constant_type = Constant
 _UI_Constant_value_feature = Value
+_UI_ConstantReference_type = Constant Reference
+_UI_Service_constants_feature = Constants
+_UI_ConstantReference_value_feature = Value
+_UI_Constant_definedBy_feature = Defined By
