Allow services to use services

--- a/uk.ac.man.cs.mdsd.service.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.service.edit/plugin.properties
@@ -223,3 +223,4 @@ _UI_ConstantReference_type = Constant Reference
 _UI_Service_constants_feature = Constants
 _UI_ConstantReference_value_feature = Value
 _UI_Constant_definedBy_feature = Defined By
+_UI_Service_uses_feature = Uses
