Allow configuration of slug fields

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -491,3 +491,4 @@ _UI_EntityOrView_containerUnique_feature = Container Unique
 _UI_SerializationGroup_type = Serialization Group
 _UI_OrmModel_serializationGroups_feature = Serialization Groups
 _UI_EntityOrView_allowFormTypeCustomisation_feature = Allow Form Type Customisation
+_UI_EntityAttribute_slugFields_feature = Slug Fields
