Cleanup menu concepts to just page and dynamic ones

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -522,3 +522,5 @@ _UI_RouteActual_type = Route Actual
 _UI_ContentUnit_routeActuals_feature = Route Actuals
 _UI_RouteActual_routeParameter_feature = Route Parameter
 _UI_RouteActual_value_feature = Value
+_UI_WafModel_globalMenus_feature = Global Menus
+_UI_WafModel_dynamicMenus_feature = Dynamic Menus
