Separate ORM and UI collection manipulation controls

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -493,3 +493,7 @@ _UI_OrmModel_serializationGroups_feature = Serialization Groups
 _UI_EntityOrView_allowFormTypeCustomisation_feature = Allow Form Type Customisation
 _UI_EntityAttribute_slugFields_feature = Slug Fields
 _UI_Association_placeholder_feature = Placeholder
+_UI_Feature_collectionOrmAllowAdd_feature = Collection Orm Allow Add
+_UI_Feature_collectionOrmAllowRemove_feature = Collection Orm Allow Remove
+_UI_Feature_collectionUiAllowAdd_feature = Collection Ui Allow Add
+_UI_Feature_collectionUiAllowRemove_feature = Collection Ui Allow Remove
