Move ui collection manipulation controls to UI

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -524,3 +524,5 @@ _UI_RouteActual_routeParameter_feature = Route Parameter
 _UI_RouteActual_value_feature = Value
 _UI_WafModel_globalMenus_feature = Global Menus
 _UI_WafModel_dynamicMenus_feature = Dynamic Menus
+_UI_UnitFeature_collectionUiAllowAdd_feature = Collection Ui Allow Add
+_UI_UnitFeature_collectionUiAllowRemove_feature = Collection Ui Allow Remove
