--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -526,3 +526,4 @@ _UI_WafModel_globalMenus_feature = Global Menus
 _UI_WafModel_dynamicMenus_feature = Dynamic Menus
 _UI_UnitFeature_collectionUiAllowAdd_feature = Collection Ui Allow Add
 _UI_UnitFeature_collectionUiAllowRemove_feature = Collection Ui Allow Remove
+_UI_CollectionUnit_containingAssociation_feature = Containing Association
